--- a/assets/css/productcss.css
+++ b/assets/css/productcss.css
@@ -1,3 +1,37 @@
+body {font-family: Arial;}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 14px;
+    transition: 0s;
+    font-size: 14px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #fff;
+    border-bottom:2px solid red;
+    color: red;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: 1px solid #ccc;
+    border-top: none;
+    background-color: #fff;
+  }
 /* header product introduce */
 .header_product_introduce {
     background-color: #fff;
@@ -26,19 +60,16 @@
 }
 
 .header_product_introduce_content_introduce {
-    display: none;
     padding: 20px;
     font-size: 14px;
 }
 .header_product_introduce_content_parameter_content {
-    display: none;
     padding: 20px;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 20px;
     color: #333;
 }
 .header_product_introduce_content_insurance_content {
-    display: none;
     padding: 20px;
     font-size: 17px;
     line-height: 20px;
